[package]
name = "monots_docgen"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "monots_docgen"

[[example]]
name = "ddoc"

[dependencies]
cfg-if = "1.0.0"
deno_ast = "0.15.0"
deno_graph = "0.27.0"
futures = "0.3.21"
lazy_static = "1.4.0"
regex = "1.5.6"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
termcolor = "1.1.3"

[dev-dependencies]
clap = "3.1.18"
criterion = { version = "0.3.5", features = ["async_futures", "html_reports"] }
tokio = { version = "1.19.2", features = ["full"] }
pretty_assertions = "1.2.1"
testing = "0.20.1"
insta = "1.14.1"

[features]
default = ["rust"]
rust = []

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "s"

[[bench]]
name = "doc_parser"
harness = false
