[package]
edition = "2021"
name = "binary_extract_node"
version = "0.0.0"
authors = ["Ifiok Jr. <ifiokotung@gmail.com>"]
publish = false

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
anyhow = "1.0.57"
binary_extract = { path = "../" }
napi = { version = "2.5.0", default-features = false, features = ["napi4"] }
napi-derive = "2.5.0"
serde = "1.0.137"
serde_json = "1.0.81"

[build-dependencies]
napi-build = "2.0.1"
